syntax = "proto3";

package data;

message RewardData {
    uint32 item_type = 10;
    uint32 item_id = 20;
    uint32 item_amount = 30;
    string item_opt_json = 40;
}

message LoadingMessageData {
    string description = 10;
    uint32 weight = 20;
}

message HeroData {
    uint32 id = 10;
    string name = 20;
    uint32 card_number = 30;
    uint32 character_info_id = 40;
    uint32 sd_character_id = 50;
    uint32 attack_type = 60;
    uint32 base_attack = 70;
    uint32 base_speed = 80;
    uint32 base_hp = 90;
    uint32 max_level = 100;
    uint32 max_kizuna = 110;
    uint32 max_attack = 120;
    uint32 max_speed = 130;
    uint32 max_hp = 140;
    uint32 max_attack_bonus = 150;
    uint32 max_speed_bonus = 160;
    uint32 max_hp_bonus = 170;
    uint32 attack_bonus = 180;
    uint32 speed_bonus = 190;
    uint32 hp_bonus = 200;
    uint32 category = 210;
    uint32 attribute = 220;
}