using Google.Protobuf;

namespace Data
{
    
    public sealed partial class HeroData : IMessage<HeroData>
    {

    }
    
    public sealed partial class LoadingMessageData : IMessage<LoadingMessageData>
    {

    }
    
    public sealed partial class RewardData : IMessage<RewardData>
    {

    }
    
}